minor change in EOL taxon lookup integration, using search/1.0.xml/?q=Homo+sapiens&exact=true instead of search/1.0/Homo%20sapiens?exact=true, yields better results with names including something var. something